deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
  replicas: 2
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: skkim7821/dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: NodePort
  ports: 
    - port: 8080
      targetPort: 80
      protocol: TCP
      nodePort: 30080
  selector:
    app: dashboard
